my-test/testsuite_scan/ir/SingleSource/Regression/C/gcc-c-torture/execute/920409-1.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/920409-1.c:1:1: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
    1 | x(){signed char c=-1;return c<0;}main(){if(x()!=1)abort();exit(0);}
      | ^
      | int
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/920409-1.c:1:34: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
    1 | x(){signed char c=-1;return c<0;}main(){if(x()!=1)abort();exit(0);}
      |                                  ^
      |                                  int
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/920409-1.c:1:51: error: call to undeclared library function 'abort' with type 'void (void) __attribute__((noreturn))'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
    1 | x(){signed char c=-1;return c<0;}main(){if(x()!=1)abort();exit(0);}
      |                                                   ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/920409-1.c:1:51: note: include the header <stdlib.h> or explicitly provide a declaration for 'abort'
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/920409-1.c:1:59: error: call to undeclared library function 'exit' with type 'void (int) __attribute__((noreturn))'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
    1 | x(){signed char c=-1;return c<0;}main(){if(x()!=1)abort();exit(0);}
      |                                                           ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/920409-1.c:1:59: note: include the header <stdlib.h> or explicitly provide a declaration for 'exit'
4 errors generated.
